force-app/main/default/objects/Product2/fields/Product2_ID__c.field-meta.xml
<CustomField>
        <fullName>Product2_ID__c</fullName>
        <formula>Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product2 ID</label>
        <type>Text</type>
    </CustomField>