force-app/main/default/objects/Product2/fields/Product_Codes_Sun__c.field-meta.xml
<CustomField>
        <fullName>Product_Codes_Sun__c</fullName>
        <description>Product codes used in Sun system.  format: XX-YY where XX is two-letter product code and YY is two-letter revenue-type code.</description>
        <label>Product Codes (Sun)</label>
        <length>10</length>
        <type>Text</type>
    </CustomField>