force-app/main/default/objects/Product2/fields/Product_Completeness__c.field-meta.xml
<CustomField>
        <fullName>Product_Completeness__c</fullName>
        <formula>IMAGE(if(Is_Product_Complete__c, &quot;/img/samples/flag_green.gif&quot;, &quot;/img/samples/flag_red.gif&quot;), &quot;Priority Flag&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Completeness</label>
        <type>Text</type>
    </CustomField>