force-app/main/default/objects/Product2/fields/Product_Family_Search__c.field-meta.xml
<CustomField>
        <fullName>Product_Family_Search__c</fullName>
        <label>Product Family Search</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>