force-app/main/default/objects/Product2/fields/Product_Group__c.field-meta.xml
<CustomField>
        <fullName>Product_Group__c</fullName>
        <label>Product Group</label>
        <length>100</length>
        <type>Text</type>
    </CustomField>