force-app/main/default/objects/Product2/fields/Product_Line__c.field-meta.xml
<CustomField>
        <fullName>Product_Line__c</fullName>
        <description>Renamed from Line of Business - CA 07/03/13</description>
        <label>Product Line</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Capital Markets</fullName>
                </value>
                <value>
                    <fullName>Core Banking</fullName>
                </value>
                <value>
                    <fullName>Enterprise Risk</fullName>
                </value>
                <value>
                    <fullName>Global Transaction Banking</fullName>
                </value>
                <value>
                    <fullName>Lending</fullName>
                </value>
                <value>
                    <fullName>Shared Infrastructure &amp; Tools</fullName>
                </value>
                <value>
                    <fullName>n/a</fullName>
                </value>
                <value>
                    <fullName>Lending &amp; Retail Banking</fullName>
                </value>
                <value>
                    <fullName>FB Core</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>