force-app/main/default/objects/Product2/fields/Product_Name__c.field-meta.xml
<CustomField>
        <fullName>Product_Name__c</fullName>
        <label>Product Name2</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>