force-app/main/default/objects/Product2/fields/Product_Number__c.field-meta.xml
<CustomField>
        <fullName>Product_Number__c</fullName>
        <inlineHelpText>Coral Variant  - master product number</inlineHelpText>
        <label>Product Number</label>
        <length>4</length>
        <type>Text</type>
    </CustomField>