force-app/main/default/objects/Product2/fields/Product_Selector_Filter__c.field-meta.xml
<CustomField>
        <fullName>Product_Selector_Filter__c</fullName>
        <description>Filter used for non-component products to filter out headlines and standalone products.</description>
        <inlineHelpText>Filter used for non-component products to filter out headlines and standalone products.</inlineHelpText>
        <label>Product Selector Filter</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Headlines</fullName>
                </value>
                <value>
                    <fullName>Legacy</fullName>
                </value>
                <value>
                    <fullName>Standalone Products</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>