force-app/main/default/objects/Product2/fields/Product_Status__c.field-meta.xml
<CustomField>
        <fullName>Product_Status__c</fullName>
        <label>Product Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Beta</fullName>
                </value>
                <value>
                    <fullName>Current (GA)</fullName>
                </value>
                <value>
                    <fullName>Sunset</fullName>
                </value>
                <value>
                    <fullName>Obsolete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>