force-app/main/default/objects/Product2/fields/Product_Sub_Family__c.field-meta.xml
<CustomField>
        <fullName>Product_Sub_Family__c</fullName>
        <label>Product Sub Family</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Flexserver</fullName>
                </value>
                <value>
                    <fullName>JRISK</fullName>
                </value>
                <value>
                    <fullName>K+TP</fullName>
                </value>
                <value>
                    <fullName>KDM</fullName>
                </value>
                <value>
                    <fullName>KGR</fullName>
                </value>
                <value>
                    <fullName>KIRL</fullName>
                </value>
                <value>
                    <fullName>Kondor</fullName>
                </value>
                <value>
                    <fullName>KSP</fullName>
                </value>
                <value>
                    <fullName>KTP</fullName>
                </value>
                <value>
                    <fullName>KVAR</fullName>
                </value>
                <value>
                    <fullName>MCM</fullName>
                </value>
                <value>
                    <fullName>MLS</fullName>
                </value>
                <value>
                    <fullName>Numerix</fullName>
                </value>
                <value>
                    <fullName>Open Trade</fullName>
                </value>
                <value>
                    <fullName>Pricing Partners</fullName>
                </value>
                <value>
                    <fullName>Sybase</fullName>
                </value>
                <value>
                    <fullName>TIBCO</fullName>
                </value>
                <value>
                    <fullName>TopOffice</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>