force-app/main/default/objects/Product2/fields/ProductManagerEmail__c.field-meta.xml
<CustomField>
        <fullName>ProductManagerEmail__c</fullName>
        <description>Product Manager Email</description>
        <inlineHelpText>Product Manager Email</inlineHelpText>
        <label>Product Manager Email</label>
        <type>Email</type>
    </CustomField>