force-app/main/default/objects/Product2/fields/QS_Auto_Activate__c.field-meta.xml
<CustomField>
        <fullName>QS_Auto_Activate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>indicates whether on creation Asset Status field should be set to Active or Pending Implementation.</description>
        <inlineHelpText>indicates whether on creation Asset Status field should be set to Active or Pending Implementation.</inlineHelpText>
        <label>Auto Activate</label>
        <type>Checkbox</type>
    </CustomField>