force-app/main/default/objects/Product2/fields/QS_Auto_Deactivate__c.field-meta.xml
<CustomField>
        <fullName>QS_Auto_Deactivate__c</fullName>
        <defaultValue>true</defaultValue>
        <description>indicates whether on expiration Asset Status field should be set to Expired or left unchanged.</description>
        <inlineHelpText>indicates whether on expiration Asset Status field should be set to Expired or left unchanged.</inlineHelpText>
        <label>Auto Deactivate</label>
        <type>Checkbox</type>
    </CustomField>