force-app/main/default/objects/Product2/fields/QS_Generate_Asset__c.field-meta.xml
<CustomField>
        <fullName>QS_Generate_Asset__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If True, a Customer Asset will always be generated when this Product is sold.</description>
        <inlineHelpText>If True, a Customer Asset will always be generated when this Product is sold.</inlineHelpText>
        <label>Generate Customer Asset</label>
        <type>Checkbox</type>
    </CustomField>