force-app/main/default/objects/Product2/fields/Quote_Section__c.field-meta.xml
<CustomField>
        <fullName>Quote_Section__c</fullName>
        <label>Quote Section</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Third Party</fullName>
                </value>
                <value>
                    <fullName>NUMPP</fullName>
                </value>
                <value>
                    <fullName>Summary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>