force-app/main/default/objects/Product2/fields/Roll_Up_to_Product__c.field-meta.xml
<CustomField>
        <fullName>Roll_Up_to_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>xxxRoll-Up to Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Products (Roll-Up to Product)</relationshipLabel>
        <relationshipName>RollUptoProduct</relationshipName>
        <type>Lookup</type>
    </CustomField>