force-app/main/default/objects/Product2/fields/Roll_Up_to_Self__c.field-meta.xml
<CustomField>
        <fullName>Roll_Up_to_Self__c</fullName>
        <defaultValue>false</defaultValue>
        <label>xxxRollup Self</label>
        <type>Checkbox</type>
    </CustomField>