force-app/main/default/objects/Product2/fields/Sales_Product_Set__c.field-meta.xml
<CustomField>
        <fullName>Sales_Product_Set__c</fullName>
        <label>Sales Product Set</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Solution_Area__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>All Other Products</fullName>
                </value>
                <value>
                    <fullName>Barometer</fullName>
                </value>
                <value>
                    <fullName>Carbon Trust</fullName>
                </value>
                <value>
                    <fullName>Channels - AVCM</fullName>
                </value>
                <value>
                    <fullName>Channels - Cavion</fullName>
                </value>
                <value>
                    <fullName>Channels - Cavion Billpay</fullName>
                </value>
                <value>
                    <fullName>Channels - Cavion Other</fullName>
                </value>
                <value>
                    <fullName>Channels - Encore</fullName>
                </value>
                <value>
                    <fullName>Channels - EZ Teller</fullName>
                </value>
                <value>
                    <fullName>Channels - Malauzai</fullName>
                </value>
                <value>
                    <fullName>Channels - Other</fullName>
                </value>
                <value>
                    <fullName>Channels - Touche</fullName>
                </value>
                <value>
                    <fullName>Channels - uBanking</fullName>
                </value>
                <value>
                    <fullName>Cheque</fullName>
                </value>
                <value>
                    <fullName>CLS</fullName>
                </value>
                <value>
                    <fullName>CME</fullName>
                </value>
                <value>
                    <fullName>CMS</fullName>
                </value>
                <value>
                    <fullName>CMT</fullName>
                </value>
                <value>
                    <fullName>Collateral MS</fullName>
                </value>
                <value>
                    <fullName>Compushare - C3</fullName>
                </value>
                <value>
                    <fullName>Compushare - Other</fullName>
                </value>
                <value>
                    <fullName>Compushare - Tech Mgmt</fullName>
                </value>
                <value>
                    <fullName>Corporate Channels</fullName>
                </value>
                <value>
                    <fullName>Digital Channels</fullName>
                </value>
                <value>
                    <fullName>Enhancement Services</fullName>
                </value>
                <value>
                    <fullName>Enterprise - Intrieve</fullName>
                </value>
                <value>
                    <fullName>Enterprise - Other</fullName>
                </value>
                <value>
                    <fullName>Enterprise - Phoenix</fullName>
                </value>
                <value>
                    <fullName>Enterprise Solutions</fullName>
                </value>
                <value>
                    <fullName>Enterprise - Sparak</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>