force-app/main/default/objects/Product2/fields/Sales_Unit__c.field-meta.xml
<CustomField>
        <fullName>Sales_Unit__c</fullName>
        <label>Sales Unit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>list units of measure setup in Intacct</fullName>
                </value>
                <value>
                    <fullName>EA</fullName>
                </value>
                <value>
                    <fullName>each</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>