force-app/main/default/objects/Product2/fields/SBQQ__BillingFrequency__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__BillingFrequency__c</fullName>
        <description>Determines how often this product will be invoiced.</description>
        <inlineHelpText>Determines how often this product will be invoiced.</inlineHelpText>
        <label>Billing Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SBQQ__BillingFrequency</valueSetName>
        </valueSet>
    </CustomField>