force-app/main/default/objects/Product2/fields/SBQQ__PricingGuidance__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__PricingGuidance__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Pricing guidance for use with this product.</description>
        <inlineHelpText>Pricing guidance for use with this product.</inlineHelpText>
        <label>Pricing Guidance</label>
        <referenceTo>SBQQ__PricingGuidance__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </CustomField>