force-app/main/default/objects/Product2/fields/Scope__c.field-meta.xml
<CustomField>
        <fullName>Scope__c</fullName>
        <inlineHelpText>for scope of use of product</inlineHelpText>
        <label>Scope</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BO</fullName>
                </value>
                <value>
                    <fullName>Expenses</fullName>
                </value>
                <value>
                    <fullName>F2B</fullName>
                </value>
                <value>
                    <fullName>FO</fullName>
                </value>
                <value>
                    <fullName>Generic</fullName>
                </value>
                <value>
                    <fullName>Hosting</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>Not Known</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>