force-app/main/default/objects/Product2/fields/Search__c.field-meta.xml
<CustomField>
        <fullName>Search__c</fullName>
        <description>Used to Filter out products for product selection. At this time, all active products are shown.</description>
        <inlineHelpText>Used to Filter out products for product selection. At this time, all active products are shown.</inlineHelpText>
        <label>Search Filter Visibility</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Show Active Products</fullName>
                    <default>true</default>
                    <label>Show Active Products</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>