force-app/main/default/objects/Product2/fields/Selling_Company__c.field-meta.xml
<CustomField>
        <fullName>Selling_Company__c</fullName>
        <label>Selling Company</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>D+H</fullName>
                </value>
                <value>
                    <fullName>Misys</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>