force-app/main/default/objects/Product2/fields/Ship_From_Code__c.field-meta.xml
<CustomField>
        <fullName>Ship_From_Code__c</fullName>
        <label>Ship From Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Ship_From_Address</valueSetName>
        </valueSet>
    </CustomField>