force-app/main/default/objects/Product2/fields/SKU_Group__c.field-meta.xml
<CustomField>
        <fullName>SKU_Group__c</fullName>
        <label>SKU Group</label>
        <length>10</length>
        <type>Text</type>
    </CustomField>