force-app/main/default/objects/Product2/fields/Slab_Entry__c.field-meta.xml
<CustomField>
        <fullName>Slab_Entry__c</fullName>
        <label>Slab Entry</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>