force-app/main/default/objects/Product2/fields/Solution_Area__c.field-meta.xml
<CustomField>
        <fullName>Solution_Area__c</fullName>
        <label>Solution Area</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Line_Of_Business__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Cash Management</fullName>
                </value>
                <value>
                    <fullName>CMS</fullName>
                </value>
                <value>
                    <fullName>CMT</fullName>
                </value>
                <value>
                    <fullName>Corporate Banking</fullName>
                </value>
                <value>
                    <fullName>Digital Channels</fullName>
                </value>
                <value>
                    <fullName>Enterprise Lending</fullName>
                </value>
                <value>
                    <fullName>Equation</fullName>
                </value>
                <value>
                    <fullName>Essence Hierarchy</fullName>
                </value>
                <value>
                    <fullName>FM-GMS</fullName>
                </value>
                <value>
                    <fullName>Global Payments Hierarchy</fullName>
                </value>
                <value>
                    <fullName>International</fullName>
                </value>
                <value>
                    <fullName>Investment Management</fullName>
                </value>
                <value>
                    <fullName>Merchant Services</fullName>
                </value>
                <value>
                    <fullName>Midas Hierarchy</fullName>
                </value>
                <value>
                    <fullName>No Analysis</fullName>
                </value>
                <value>
                    <fullName>Other Products</fullName>
                </value>
                <value>
                    <fullName>Risk</fullName>
                </value>
                <value>
                    <fullName>TEMS</fullName>
                </value>
                <value>
                    <fullName>Trade &amp; Supply Chain Finance</fullName>
                </value>
                <value>
                    <fullName>Treasury and Capital Markets</fullName>
                </value>
                <value>
                    <fullName>US Lending</fullName>
                </value>
                <value>
                    <fullName>US Mortgages</fullName>
                </value>
                <value>
                    <fullName>US Payments</fullName>
                </value>
                <value>
                    <fullName>US Retail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>