force-app/main/default/objects/Product2/fields/Standard_Payment_Term__c.field-meta.xml
<CustomField>
        <fullName>Standard_Payment_Term__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This checkbox is used to drive Standard Payment Terms for products as it relates to approvals. Documented in REQ 2780.</inlineHelpText>
        <label>Standard Payment Term</label>
        <type>Checkbox</type>
    </CustomField>