force-app/main/default/objects/Product2/fields/Static_Notes__c.field-meta.xml
<CustomField>
        <fullName>Static_Notes__c</fullName>
        <label>Static Notes</label>
        <length>131072</length>
        <type>Html</type>
    </CustomField>