force-app/main/default/objects/Product2/fields/Temp_Flag__c.field-meta.xml
<CustomField>
        <fullName>Temp_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Temp Flag</label>
        <type>Checkbox</type>
    </CustomField>