force-app/main/default/objects/Product2/fields/Third_Party_Partner__c.field-meta.xml
<CustomField>
        <fullName>Third_Party_Partner__c</fullName>
        <description>When the product is OWMed from a partner, this field denotes the partner</description>
        <inlineHelpText>When the product is OWMed from a partner, this field denotes the partner</inlineHelpText>
        <label>Third Party Partner</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>32 Bit</fullName>
                </value>
                <value>
                    <fullName>GlobeOp</fullName>
                </value>
                <value>
                    <fullName>MCC</fullName>
                </value>
                <value>
                    <fullName>NumeriX</fullName>
                </value>
                <value>
                    <fullName>Pricing Partners</fullName>
                </value>
                <value>
                    <fullName>Reuters</fullName>
                </value>
                <value>
                    <fullName>Sybase</fullName>
                </value>
                <value>
                    <fullName>Systematica</fullName>
                </value>
                <value>
                    <fullName>Targit</fullName>
                </value>
                <value>
                    <fullName>TIBCO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>