force-app/main/default/objects/Product2/fields/ThirdParty_Costs_Sold_Ccy_c__c.field-meta.xml
<CustomField>
        <fullName>ThirdParty_Costs_Sold_Ccy_c__c</fullName>
        <label>ThirdParty_Costs_Sold_Ccy</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>