force-app/main/default/objects/Product2/fields/ThirdParty_PO_Currency__c.field-meta.xml
<CustomField>
        <fullName>ThirdParty_PO_Currency__c</fullName>
        <label>ThirdParty PO Currency</label>
        <length>10</length>
        <type>Text</type>
    </CustomField>