force-app/main/default/objects/Product2/fields/Tier1Group__c.field-meta.xml
<CustomField>
        <fullName>Tier1Group__c</fullName>
        <description>Designates the section in which the product will be grouped in BigMachines</description>
        <label>Tier 1 Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ADM</fullName>
                </value>
                <value>
                    <fullName>HW</fullName>
                </value>
                <value>
                    <fullName>JR</fullName>
                </value>
                <value>
                    <fullName>KGL</fullName>
                </value>
                <value>
                    <fullName>KGR</fullName>
                </value>
                <value>
                    <fullName>KP</fullName>
                </value>
                <value>
                    <fullName>KPE</fullName>
                </value>
                <value>
                    <fullName>KTP</fullName>
                </value>
                <value>
                    <fullName>KVAR</fullName>
                </value>
                <value>
                    <fullName>SV</fullName>
                </value>
                <value>
                    <fullName>TO</fullName>
                </value>
                <value>
                    <fullName>TP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>