force-app/main/default/objects/Product2/fields/Tier2Group__c.field-meta.xml
<CustomField>
        <fullName>Tier2Group__c</fullName>
        <label>Tier 2 Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ADD</fullName>
                </value>
                <value>
                    <fullName>ADM</fullName>
                </value>
                <value>
                    <fullName>ASSET</fullName>
                </value>
                <value>
                    <fullName>BB</fullName>
                </value>
                <value>
                    <fullName>BO</fullName>
                </value>
                <value>
                    <fullName>COM</fullName>
                </value>
                <value>
                    <fullName>COMP</fullName>
                </value>
                <value>
                    <fullName>CR</fullName>
                </value>
                <value>
                    <fullName>CRT</fullName>
                </value>
                <value>
                    <fullName>CS</fullName>
                </value>
                <value>
                    <fullName>DEV</fullName>
                </value>
                <value>
                    <fullName>EXP</fullName>
                </value>
                <value>
                    <fullName>FM</fullName>
                </value>
                <value>
                    <fullName>HDTR</fullName>
                </value>
                <value>
                    <fullName>HIST</fullName>
                </value>
                <value>
                    <fullName>HOST</fullName>
                </value>
                <value>
                    <fullName>INSTR</fullName>
                </value>
                <value>
                    <fullName>IRD</fullName>
                </value>
                <value>
                    <fullName>KGR</fullName>
                </value>
                <value>
                    <fullName>KNDP</fullName>
                </value>
                <value>
                    <fullName>KP</fullName>
                </value>
                <value>
                    <fullName>LIMIT</fullName>
                </value>
                <value>
                    <fullName>LIQ</fullName>
                </value>
                <value>
                    <fullName>MC</fullName>
                </value>
                <value>
                    <fullName>MET</fullName>
                </value>
                <value>
                    <fullName>MGR</fullName>
                </value>
                <value>
                    <fullName>MKT</fullName>
                </value>
                <value>
                    <fullName>MOD</fullName>
                </value>
                <value>
                    <fullName>MR</fullName>
                </value>
                <value>
                    <fullName>NX</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>